# minimal-lambda

./: .gitignore  Cargo.toml  README.md
scripts/: build_with_docker.sh  init_docker.sh
src/: main.rs
