[package]
name = "minimal-λ"
authors = ["Denis Deniz González <denis2.glez@gmail.com>"]
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
tokio = "1.13"
lambda_runtime = "0.4"
